Hopefully fixed scrollbars in github pages

--- a/style/main.css
+++ b/style/main.css
@@ -18,6 +18,8 @@
 
 html{
     height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body{
